--- a/vue-03-todo/package.json
+++ b/vue-03-todo/package.json
@@ -13,6 +13,7 @@
   "author": "Sannim",
   "license": "MIT",
   "devDependencies": {
-    "webpack": "^4.44.1"
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12"
   }
 }
