--- a/vue-03-todo/package.json
+++ b/vue-03-todo/package.json
@@ -17,5 +17,8 @@
     "vue-template-compiler": "^2.6.12",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12"
+  },
+  "dependencies": {
+    "vue": "^2.6.12"
   }
 }
