--- a/vue-03-todo/package.json
+++ b/vue-03-todo/package.json
@@ -13,7 +13,10 @@
   "author": "Sannim",
   "license": "MIT",
   "devDependencies": {
+    "babel-loader": "^8.1.0",
+    "css-loader": "^4.2.2",
     "vue-loader": "^15.9.3",
+    "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.12",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12"
