--- a/vue-03-todo/package.json
+++ b/vue-03-todo/package.json
@@ -13,6 +13,8 @@
   "author": "Sannim",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.11.5",
+    "@babel/preset-env": "^7.11.5",
     "babel-loader": "^8.1.0",
     "css-loader": "^4.2.2",
     "vue-loader": "^15.9.3",
@@ -22,6 +24,7 @@
     "webpack-cli": "^3.3.12"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.11.5",
     "vue": "^2.6.12"
   }
 }
