--- a/vue-03-todo/package.json
+++ b/vue-03-todo/package.json
@@ -17,6 +17,7 @@
     "@babel/preset-env": "^7.11.5",
     "babel-loader": "^8.1.0",
     "css-loader": "^4.2.2",
+    "html-webpack-plugin": "^4.4.1",
     "vue-loader": "^15.9.3",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.12",
