--- a/vue-03-todo/package.json
+++ b/vue-03-todo/package.json
@@ -16,6 +16,7 @@
     "@babel/core": "^7.11.5",
     "@babel/preset-env": "^7.11.5",
     "babel-loader": "^8.1.0",
+    "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.1.0",
     "css-loader": "^4.2.2",
     "html-webpack-plugin": "^4.4.1",
