--- a/vue-03-todo/package.json
+++ b/vue-03-todo/package.json
@@ -11,16 +11,24 @@
     "vue",
     "todo"
   ],
+  "browserslist": [
+    "last 2 versions",
+    "ie >= 10"
+  ],
   "author": "Sannim",
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.11.5",
     "@babel/preset-env": "^7.11.5",
+    "autoprefixer": "^9.8.6",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.1.0",
     "css-loader": "^4.2.2",
     "html-webpack-plugin": "^4.4.1",
+    "node-sass": "^4.14.1",
+    "postcss-loader": "^3.0.0",
+    "sass-loader": "^7.3.1",
     "vue-loader": "^15.9.3",
     "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.12",
