--- a/vue-03-todo/.gitignore
+++ b/vue-03-todo/.gitignore
@@ -1,1 +1,20 @@
-node_modules/**
+#기본 디렉터리 혹은 파일
+node_modules
+dist
+
+# 로컬 환경변수 파일
+.env.local
+.env.*.local
+
+#로그 파일
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+#에디터 디렉터리 혹은 파일들
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njfproj
+*.sln
