--- a/vue-03-todo/package.json
+++ b/vue-03-todo/package.json
@@ -2,14 +2,16 @@
   "name": "vue-03-todo",
   "version": "1.0.0",
   "description": "- Vue CLI 미사용\r   - 프로젝트가 어떻게 동작하는지 이해하기 위함\r - Heroppy 강좌 수강\r - [Vue Todo list app](https://github.com/heropcode/vue-todo-app)",
-  "repository":{
-    "type":"git",
-    "url":"https://github.com/sannimdev/vue-fastcampus-all-in-one"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sannimdev/vue-fastcampus-all-in-one"
   },
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --mode development",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "lint": "eslint --ext .js,.vue .",
+    "lint:fix": "eslint --fix --ext .js,.vue ."
   },
   "keywords": [
     "vue",
@@ -25,10 +27,18 @@
     "@babel/core": "^7.11.5",
     "@babel/preset-env": "^7.11.5",
     "autoprefixer": "^9.8.6",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.1.0",
     "css-loader": "^4.2.2",
+    "eslint": "^5.16.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "eslint-plugin-vue": "^6.2.2",
     "html-webpack-plugin": "^4.4.1",
     "node-sass": "^4.14.1",
     "postcss-loader": "^3.0.0",
