db에 데이터를 삽입하기 위한 구조 작성. id는 crypto-random-string 모듈을 이용한다.

--- a/vue-03-todo-cli/package.json
+++ b/vue-03-todo-cli/package.json
@@ -9,6 +9,9 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "crypto-random-string": "^3.3.0",
+    "lodash": "^4.17.20",
+    "lowdb": "^1.0.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
