SCSS관련 모듈(scss-loader node-sass) 설치 및 TodoItem 스타일 일부 적용 모든 항목, 해야 할 항목, 완료된 항목 구분하여 리스트 표시하기 (computed 이용)

--- a/vue-03-todo-cli/package.json
+++ b/vue-03-todo-cli/package.json
@@ -13,6 +13,8 @@
     "dayjs": "^1.8.35",
     "lodash": "^4.17.20",
     "lowdb": "^1.0.0",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^10.0.2",
     "vue": "^2.6.11"
   },
   "devDependencies": {
