--- a/vue-03-todo-cli/package.json
+++ b/vue-03-todo-cli/package.json
@@ -15,6 +15,7 @@
     "lowdb": "^1.0.0",
     "node-sass": "^4.14.1",
     "sass-loader": "^10.0.2",
+    "scroll-to": "0.0.2",
     "vue": "^2.6.11"
   },
   "devDependencies": {
