--- a/vue-03-todo-cli/package.json
+++ b/vue-03-todo-cli/package.json
@@ -16,7 +16,8 @@
     "node-sass": "^4.14.1",
     "sass-loader": "^10.0.2",
     "scroll-to": "0.0.2",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-router": "^3.4.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
