--- a/vue-03-todo-cli/package.json
+++ b/vue-03-todo-cli/package.json
@@ -17,7 +17,8 @@
     "sass-loader": "^10.0.2",
     "scroll-to": "0.0.2",
     "vue": "^2.6.11",
-    "vue-router": "^3.4.3"
+    "vue-router": "^3.4.3",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
